Implementing som bootstrap stuff to the web application

--- a/MicroBreweryWebApplication/MicroBreweryWebApplication.csproj
+++ b/MicroBreweryWebApplication/MicroBreweryWebApplication.csproj
@@ -184,6 +184,8 @@
     <Content Include="Views\Home\About.cshtml" />
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
+    <Content Include="Views\Home\User.cshtml" />
+    <Content Include="Views\Home\Admin.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
